# GauriShinde

./: README.md
LogisticRegression/: logistic_regression.py  test.py
MatrixLibrary/: Application.cpp  Matrix.cpp  Matrix.h
MatrixPy/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixPybind.cpp
PID/: derivativeController.cpp  derivativeController.h  pidController.cpp  pidController.h  proportionalController.h
Regression/: README.md  pyproject.toml  test.py
Regression/Regression/: __init__.py  logistic_regression.py  regression.py
Regression/logistic_regression_lib.egg-info/: PKG-INFO  SOURCES.txt
Regression/regression_lib.egg-info/: PKG-INFO  SOURCES.txt
pidControl/: Application.cpp  CMakeLists.txt  derivativeController.cpp  derivativeController.h  integralController.cpp  integralController.h  pidBind.cpp  pidController.cpp  pidController.h  proportionalController.cpp  proportionalController.h
